--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
     <head>
     <title>🎄圣诞快乐🎄</title>
+<link href="https://fonts.googleapis.com/css2?family=Mountains+of+Christmas&display=swap" rel="stylesheet">
+
     <meta charset="utf-8">
         <style>
             html, body
@@ -93,7 +95,7 @@
     display: flex;
     justify-content: center; /* 水平居中 */
     align-items: center; /* 垂直居中 */
-    height: 35%;     
+    height: 100%;     
     width: 100%;   
     
 }
@@ -148,7 +150,7 @@
             with(getContext('2d'))        
             if(k>10|!k)        
             for(        
-            font='30px Impact',        
+            font='60px Impact',        
             V='rgba(';I=i*U,fillStyle=k?k==13?V+'205,205,215,.15)':        
             V+(147+I)+','+(k%2?128+I:0)+','+I+',.5)':'#cca',i<7;        
             )    
@@ -199,7 +201,7 @@
 
                 if (i == 2e3) {
 	    var fontSize = 30; // 字体大小
-        a.font = fontSize + 'px Impact'; // 设置字体大小和样式
+        a.font = fontSize + 'px "Mountains of Christmas"'; // 设置字体大小和样式
         a.fillStyle = 'rgba(49, 113, 67, 1)';
         
         var text = 'Happy Christmas!';
