--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
 .canvas-container {
     display: flex;
     justify-content: center; /* 水平居中 */
+    align-items: center; /* 垂直居中 */
     height: 100%;     
     width: 100%;   
     
