--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
 .canvas-container {
     display: flex;
     justify-content: center; /* 水平居中 */
-    align-items: center; /* 垂直居中 */
-    height: 100%;     
+    /* align-items: center; 垂直居中 */
+    height: 40%;     
     width: 100%;   
     
 }
